--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -26,7 +26,7 @@ footer {
         }
       }
       .top {
-        padding-bottom: 1rem;
+        padding-bottom: 0.5rem;
       }
     }
 
