--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -46,7 +46,7 @@
       .links,
       .vox {
         text-align: center;
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
       }
     }
   }
